testdata/test/resources/com/yafred/asn1/test/should_fail/module_duplicate_name.asn
-- FAILS: modules have same reference name

My-Module DEFINITIONS ::=

BEGIN

My-Integer ::= SEQUENCE 
{
    a INTEGER
}

My-Boolean ::= BOOLEAN

END



My-Module DEFINITIONS ::=

BEGIN

My-Integer ::= SEQUENCE 
{
    a INTEGER
}

My-Boolean ::= BOOLEAN

END
